# Outreach-2

./: .env.example  .gitignore  Makefile  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 32adf47e0c74_add_email_accounts_templates_users.py  690266d1dfe0_initial_schema.py  97803ba64700_add_system_settings.py  ea10c4fe9abe_initial_schema.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: badge.tsx  sidebar.tsx  stat-card.tsx
scripts/: run_once.py  seed_config.py
src/: celery_app.py
src/config/: constants.py  settings.py
src/db/: __init__.py  session.py
src/enrichment/: cache.py  crunchbase.py  hunter.py  rocketreach.py  tasks.py  team_scraper.py
src/notifications/: slack.py  templates.py
src/outreach/: campaign_mapper.py  hubspot.py  instantly.py  lemlist.py  tasks.py  variables.py
src/replies/: actions.py  assignment.py  classifier.py  poller.py  tasks.py
src/scoring/: categories.py  filters.py  icp.py  tasks.py
src/scraper/: base.py  dedup.py  registry.py  tasks.py
src/shared/: exceptions.py  http_client.py  logging.py  retry.py
tests/: conftest.py  factories.py
tests/test_enrichment/: test_crunchbase.py
tests/test_notifications/: test_slack.py
tests/test_outreach/: test_campaign_mapper.py
tests/test_replies/: test_classifier.py
tests/test_scoring/: test_filters.py  test_icp.py
tests/test_scraper/: test_base.py
(+45 files in other folders)
